doc/0.34/_sources/reference/get-ad.txt
.. index:: GET /ad
.. _ISO 8601: http://en.wikipedia.org/wiki/ISO_8601
.. _get_ad:

GET /ad
=======

This URL returns a list of complete ads for the current user. The number of
records returned can be limited with the ``limit`` parameter. The ``offset``
parameter allows to skip some ads and together with ``limit`` allows for
pagination. 

The ``status`` parameter returns only ads with the given status. The default
is to return only ads with status **ACTIVE**.

The ``orderBy`` and ``direction`` parameters control the sort field and
direction.

The ``titleKeywords`` parameter is case-insensitive and will include only ads
which contain the given keyword in their title.

The ``changedSince`` parameter can be used to retrieve only ads that have
:ref:`ad_dateLastUpdated` >= ``changedSince``. The ``changedSince`` value must be a
valid `ISO 8601`_ UTC date which usually lies in the past but cannot lie in
the future.

The ``changedSince`` parameter should only be combined with ``limit`` and
``offset``. Filtering by ``status`` and ``titleKeyword`` may be used but
``orderBy`` and ``direction`` cannot be changed since this would break the
pagination.

.. note::

    The fields :ref:`ad_pageNumber` and :ref:`ad_suggestedCpcForPageOne` are
    currently expensive to compute. If you do not need their values consider
    excluding them to speed up the response. To exclude the fields add the
    following parameter to the request URL. ::

        ?_exclude=pageNumber,suggestedCpcForPageOne

--------------------------
Caching all ads for a user
--------------------------

If an application needs to keep a cache of the entire set of ads for a user
then it should perform the following steps:

1. Fetch all ads by using ``limit`` and ``offset`` until all
ads have been retrieved. No filters should be used.

2. Retrieve updates by using ``changedSince``, ``limit`` and ``offset``. No
additional filters should be used. ``changedSince`` should be set to a value a
somewhat before (e.g. 1 min) of ``dateLastUpdated`` of the last modified ad.

Due to the nature of this system retrieving updates as described in step 2
will always return at least the ad that was modified last. Also, the API can
currently not guarantee that all updates are retrieved when ``changedSince``
is set to ``dateLastUpdated`` of the last modified ad. That's why you should
use ``dateLastUpdated`` - 1 minute. To determine whether an ad has changed
compare the ``dateLastUpdated`` value.

Unless you have a very small set of ads (< 10) do not retrieve all ads every
time since this will not give you decent performance and also puts unnecessary
load on the system.

============
JSON Example
============

.. code-block :: javascript

    GET /ad[?limit=limit][&offset=offset][&titleKeywords=titleKeywords][&status=Status][&orderBy=orderBy][&changedSince=timestamp][&_include=list,of,fields][&_exclude=list,of,fields]
    Accept: application/sellside.ad.list-v1+json
   
    200 OK
    Content-Type: application/sellside.ad.list-v1+json;charset=UTF-8

    [
      {'totalBudget': 5000, 'links': {'category': '/category/631', 'self': '/ad/1001137306'}, 'currency': 'EUR', 'postcode': '1097DN', 'images': [], 'id': 1001137306, 'dailyBudget': 1000, 'title': 'Python Sellside Test Ad Title 50699609', 'spentBudget': 0, 'externalId': '50699609', 'phoneNumber': '020 1234567', 'salutation': 'FEMALE', 'offered': False, 'status': 'ACTIVE', 'description': '<EM> my<EM>text <STRONG><STRONG> is<UL><LI><U><BR>  50699609</U></LI></UL></STRONG></STRONG></EM></EM>', 'price': 1000, 'dateLastUpdated': '2012-10-01T13:10:21Z', 'dateCreated': '2012-10-01T13:10:21Z', 'allowContactByEmail': True, 'sellerName': 'seller 50699609', 'cpc': 1, 'categoryId': 631, 'priceType': 'FIXED_PRICE'},
      {'totalBudget': 5000, 'links': {'category': '/category/631', 'self': '/ad/1001137305'}, 'currency': 'EUR', 'postcode': '1097DN', 'images': [], 'id': 1001137305, 'dailyBudget': 1000, 'title': '0tgclhr0a4xib2c6lolejk7w8ijjyn8n0zy2035xmjcuq3u0wbus4e1jaraj', 'spentBudget': 0, 'externalId': '50699609', 'phoneNumber': '020 1234567', 'salutation': 'FEMALE', 'offered': False, 'status': 'ACTIVE', 'description': 'Python Sellside Test Ad Description 50699609', 'price': 1000, 'dateLastUpdated': '2012-10-01T13:10:21Z', 'dateCreated': '2012-10-01T13:10:21Z', 'allowContactByEmail': True, 'sellerName': 'seller 50699609', 'cpc': 1, 'categoryId': 631, 'priceType': 'FIXED_PRICE'},
      {'totalBudget': 5000, 'links': {'category': '/category/631', 'self': '/ad/1001137304'}, 'currency': 'EUR', 'postcode': '1097DN', 'images': [], 'id': 1001137304, 'dailyBudget': 1000, 'title': 'Python Sellside Test Ad Title 50699609', 'spentBudget': 0, 'externalId': '50699609', 'phoneNumber': '020 1234567', 'salutation': 'FEMALE', 'offered': False, 'status': 'ACTIVE', 'description': 'Python Sellside Test Ad Description 50699609', 'price': 1000, 'dateLastUpdated': '2012-10-01T13:10:21Z', 'dateCreated': '2012-10-01T13:10:20Z', 'allowContactByEmail': True, 'sellerName': 'rns39wfesdv0lsrl5hrzwjjpqvqcdfi5gdsinrovsag9qq9fyhyyjmarp56c', 'cpc': 1, 'categoryId': 631, 'priceType': 'FIXED_PRICE'},
      {'totalBudget': 5000, 'links': {'category': '/category/631', 'self': '/ad/1001137303'}, 'currency': 'EUR', 'postcode': 'cqbn99', 'images': [], 'id': 1001137303, 'dailyBudget': 1000, 'title': 'Python Sellside Test Ad Title 50699609', 'spentBudget': 0, 'externalId': '50699609', 'phoneNumber': '020 1234567', 'salutation': 'FEMALE', 'offered': False, 'status': 'ACTIVE', 'description': 'Python Sellside Test Ad Description 50699609', 'price': 1000, 'dateLastUpdated': '2012-10-01T13:10:20Z', 'dateCreated': '2012-10-01T13:10:20Z', 'allowContactByEmail': True, 'sellerName': 'seller 50699609', 'cpc': 1, 'categoryId': 631, 'priceType': 'FIXED_PRICE'},
     ...
    ]

==========
Parameters
==========

=============    ========    ============================================================================
Name             Type        Description
=============    ========    ============================================================================
limit            int         Limits the number of records returned. Default **and** maximum is 100.
offset           int         Skips the first N records.
titleKeywords    string      Case-insensitive filter for a keyword in the title.
status           string      Filters the result set by the ad status. Should be a comma separated list of [ACTIVE,PAUSED,DELETED,DELETED_BY_CS,SUSPENDED_BY_CS,BUDGET_REACHED,DAILY_BUDGET_REACHED]. Default value is ACTIVE.
orderBy          string      Orders the result set by the given field. Should be one of [DATE_CREATED,DATE_CREATED,DATE_LAST_UPDATED,DATE_LAST_UPDATED]. Default value is DATE_CREATED.
direction        string      Determines the direction of the sort. Should be one of [ASCENDING,DESCENDING]. Default is ASCENDING.
changedSince     date        Returns ads which have ``changedSince`` >= ``dateLastUpdated``.
_include         string      Comma-separated-list of fields to include. Optional, default is all fields.
_exclude         string      Comma-separated-list of fields to omit. Optional, default empty.
=============    ========    ============================================================================

======
Errors
======

====================    ====    =======================     ==============================================================================
Field                   Code    Error message               Description
====================    ====    =======================     ==============================================================================
limit                   2001    invalid argument            not a valid number
limit                   2002    out of range                less than 1 or greater than 100.
offset                  2001    invalid argument            not a valid number
offset                  2002    out of range                less than 0.
titleKeywords           2004    value too short             must be 3 characters or more.
status                  2001    invalid argument            not a recognised status to filter on
orderBy                 2001    invalid argument            not a recognised orderBy to filter on
orderBy                 2013    invalid state               cannot be used in combination with changedSince
direction               2001    invalid argument            not a recognised direction to filter on
direction               2013    invalid state               cannot be used in combination with changedSince
changedSince            2001    invalid argument            not a valid date
changedSince            2002    out of range                date is in the future
====================    ====    =======================     ==============================================================================
